# voxtra

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  glossary.md  luso8-integration-roadmap.md  media-guide.md  releasing.md  telephony-guide.md
examples/ai_agent/: main.py
examples/ivr_menu/: main.py
examples/minimal/: main.py
examples/saas_multitenant/: main.py
examples/sales_bot/: main.py  voxtra.yaml
examples/support_bot/: main.py  voxtra.yaml
src/voxtra/: __init__.py  app.py  cli.py  config.py  events.py  exceptions.py  middleware.py  registry.py  router.py  session.py  types.py  webhooks.py
src/voxtra/ai/: __init__.py
src/voxtra/ai/llm/: __init__.py  base.py  openai.py
src/voxtra/ai/stt/: __init__.py  base.py  deepgram.py
src/voxtra/ai/tts/: __init__.py  base.py  elevenlabs.py
src/voxtra/ai/vad/: __init__.py  base.py
src/voxtra/ari/: __init__.py  client.py  events.py  models.py
src/voxtra/audio/: __init__.py  codec.py  socket.py
src/voxtra/core/: __init__.py  pipeline.py
src/voxtra/media/: __init__.py  audio.py  base.py  buffer.py  session_transport.py  websocket.py
src/voxtra/provisioning/: __init__.py  provisioner.py
src/voxtra/recording/: __init__.py  sinks.py
src/voxtra/telephony/: __init__.py  base.py
src/voxtra/telephony/asterisk/: __init__.py  adapter.py
src/voxtra/telephony/livekit/: __init__.py  adapter.py
tests/: test_app.py  test_ari.py  test_ari_originate.py  test_asterisk_adapter.py  test_audio.py  test_audiosocket.py  test_config.py  test_events.py  test_provisioning.py  test_recording.py  test_registry.py  test_router.py  test_session.py  test_session_transport.py  test_types.py  test_webhooks.py
