[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxtra"
version = "0.1.0"
description = "Open voice infrastructure for AI agents — bridging telephony and AI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Rexplore Research Labs" },
]
keywords = ["voice", "telephony", "ai", "asterisk", "sip", "call-center", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
asterisk = [
    "asyncari>=0.3",
]
livekit = [
    "livekit>=0.11",
    "livekit-agents>=0.8",
]
deepgram = [
    "deepgram-sdk>=3.0",
]
openai = [
    "openai>=1.0",
]
elevenlabs = [
    "elevenlabs>=1.0",
]
cartesia = [
    "cartesia>=1.0",
]
all = [
    "voxtra[asterisk,livekit,deepgram,openai,elevenlabs,cartesia]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/rexplore-ai/voxtra"
Documentation = "https://github.com/rexplore-ai/voxtra/docs"
Repository = "https://github.com/rexplore-ai/voxtra"
Issues = "https://github.com/rexplore-ai/voxtra/issues"

[project.scripts]
voxtra = "voxtra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voxtra"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
